--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -12,10 +12,12 @@
                  <div class="navbar-area">
                     <nav class="site-navbar">
                        <ul>
-                          <li><a class="active" href="index.html">Home</a></li>
-                          <li><a href="about.html">About</a></li>
+                          <li><a class="<%= link ==='index' && 'active' %>" href="/">Home</a></li>
+                          <li><a class="<%= link ==='about' && 'active' %>" href="/about">About</a></li>
                           <li><a href="services.html">Services</a></li>
-                          <li><a href="gallery.html">Gallery</a></li>
+                          <li><a class="<%= link ==='photos' && 'active' %>" href="/photos">photos</a></li>
+                          <li><a class="<%= link ==='register' && 'active' %>" href="/register">Register</a></li>
+                          <li><a class="<%= link ==='login' && 'active' %>" href="/login">Login</a></li>
                           <li><a href="projects.html">Projects</a></li>
                           <li><a href="blog.html">Blog</a></li>
                           <li><a href="contact.html">Contact</a></li>
@@ -26,12 +28,13 @@
                     </nav>
                  </div>
               </div>
-              <div class=" col-md-2 di_none">
+              <!-- <div class=" col-md-2 di_none">
                 <ul class="email text_align_right"><li><a href="Javascript:void(0)">Login</a></li>
                 <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                 </ul>
-              </div>
+              </div> -->
            </div>
         </div>
      </header>
      <!-- end header inner -->
+      
