--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -3,7 +3,7 @@
    <body class="main-layout inner_page">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#"/></div>
+         <div class="loader"><img src="/images/loading.gif" alt="#"/></div>
       </div>
       <!-- end loader -->
      
@@ -18,12 +18,12 @@
               <div class="titlepage text_align_left">
                 <h2><%= photo.name %> </h2>
                 <p><%= photo.description %></p>
-                <a class="read_more" href="about.html">Read More</a>
+                <a class="read_more" href="about.html"><%= photo.user.username %></a>
               </div>
             </div>
             <div class="col-md-6">
               <div class="about_img">
-                <figure><img src="images/about_img.png" alt="#"/></figure>
+                <figure><img src="<%= photo.url %>" alt="<%= photo.name %>"/></figure>
               </div>
             </div>
           </div>
