--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -20,17 +20,19 @@
                 <p><%= photo.description %></p>
                 <a class="read_more" href="/users/<%= photo.user._id %>"><%= photo.user.username %></a>
 
+                <% if (isOwner) { %>
                 
-                <div style="margin-top: 30px ;">
-                  <ul style="display: flex; justify-content: space-between;">
-                     <li><button style="min-width: 266px;" class="read_more" data-toggle="modal" 
-                      data-target="#updateModal">Update</button></li>
-                      <li><a style="min-width: 266px;" class="read_more"
-                        href="/photos/<%= photo._id %>?_method=DELETE"
-                        onclick="return confirm('Do you want to delete the photo')">Delete</a></li>
-                  </ul>
-               </div> 
+                  <div style="margin-top: 30px ;">
+                    <ul style="display: flex; justify-content: space-between;">
+                       <li><button style="min-width: 266px;" class="read_more" data-toggle="modal"
+                             data-target="#updateModal">Update</button></li>
+                       <li><a style="min-width: 266px;" class="read_more"
+                             href="/photos/<%= photo._id %>?_method=DELETE"
+                             onclick="return confirm('Do you want to delete the photo')">Delete</a></li>
+                    </ul>
+                 </div>
 
+              <% } %>
 
               </div>
             </div>
